@@ -5,6 +5,7 @@
         <file>images/arrow_refresh.png</file>
         <file>images/arrow_up.png</file>
         <file>images/book_open.png</file>
+        <file>images/control_pause.png</file>
         <file>images/control_play.png</file>
         <file>images/control_stop.png</file>
         <file>images/cross.png</file>
