@@ -44,13 +44,25 @@ void ProgressBarDelegate::paint(QPainter * painter, const QStyleOptionViewItem &
 		// check if this item exists
 		if (videoItem != NULL)
 		{
-			if (videoItem->isDownloading() || videoItem->isConverting())
+			if (videoItem->isDownloading() || videoItem->isConverting() || 
+				videoItem->isPaused() || videoItem->isResuming())
 			{
 				// paint the progress bar
 				xProgressBar progressBar(option.rect, painter);
-				progressBar.setColorSchema(videoItem->isDownloading() ? 0 : 8);
-				progressBar.setDisplayText(false);
+				// set the color schema
+				progressBar.setColorSchema(
+					videoItem->isDownloading() ? 0 :	// downloading progress bar
+					videoItem->isConverting() ? 8 :		// converting progress bar
+					videoItem->isPaused() ? 9 :			// paused progress bar
+					4);									// resuming progress bar
+				// display a text only, for paused and resuming videos
+				progressBar.setDisplayText(videoItem->isPaused() || videoItem->isResuming());
+				// set a custom text, only for paused and resuming videos
+				if (videoItem->isPaused() || videoItem->isResuming()) 
+					progressBar.setText(videoItem->getVideoStateAsString());
+				// set progressbar value
 				progressBar.setValue(videoItem->getProgress());
+				// set the vertical span and paint the progressBar
 				progressBar.setVerticalSpan(1);
 				progressBar.paint();
 				// ok
